Fix alignment of materials for events

--- a/indico/web/client/styles/modules/_attachments.scss
+++ b/indico/web/client/styles/modules/_attachments.scss
@@ -333,9 +333,7 @@
         white-space: nowrap;
 
         margin-top: 0.2em;
-        &:not(:first-child) {
-            margin-left: 0.2em;
-        }
+
         &.is-protected {
             @extend %protected-colors;
         }
@@ -345,13 +343,8 @@
         }
     }
     .folder {
-        display: inline-block;
-
-        // folder-root may be invisible. In that case, we should
-        // omit the margin in the element right next to it.
-        &:not(.folder-root-empty) + * {
-            margin-left: 0.2em;
-        }
+        display: inline-flex;
+        margin-left: 0.2em;
 
         &.is-protected {
             .i-button.label {
